--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -60,6 +60,11 @@ This table shows the average of C39 is 51.0 and the average of C52 if 64.5
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
+```{r}
+t.test(VitC~Cult,data=veggy)
+```
+
+p- value= .00000003405 This is a very small number, and the null hypotheses says that they have the same amount of Vitamin C. We can see that C52 is better than C39
 
 # Discussion and Conclusion
 
