--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -69,3 +69,5 @@ p- value= .00000003405 This is a very small number, and the null hypotheses says
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
+
+In conclusion the cultivation method C52 results is greater Vitamin C than C39.
